[package]
name = "excelize"
version = "0.0.1"
authors = ["xuri <xuri.me@gmail.com>"]
edition = "2018"
rust-version = "1.63.0"
license = "BSD-3-Clause"
homepage="https://xuri.me/excelize"
repository="https://github.com/xuri/exelize-rs"
documentation="https://docs.rs/excelize"
description="Rust language library for reading and writing Microsoft Excel™ (XLAM / XLSM / XLSX / XLTM / XLTX) spreadsheets"
readme = "README.md"
keywords = ["excel", "spreadsheet", "xlsx", "office", "vba"]
categories = ["encoding", "mathematics", "parsing", "text-processing", "virtualization"]

[dependencies]
zip = "0.5.9"
serde = { version = "1.0.118", features = [ "derive" ] }
quick-xml = { version = "0.20", features = [ "serialize" ] }
